--- a/platforms/android/assets/www/category.html
+++ b/platforms/android/assets/www/category.html
@@ -1,5 +1,7 @@
 <ons-page class="center">
-    <ons-navigator-toolbar title="盒子组"  right-button-icon="fa fa-lg fa-plus"
-                           on-right-button-click="ons.navigator.pushPage('category-create.html')">
-    </ons-navigator-toolbar>
+	<div ng-controller="CategoryCtrl">
+	    <ons-navigator-toolbar title="盒子组"  right-button-icon="fa fa-lg fa-plus"
+	                           on-right-button-click="ons.navigator.pushPage('category-create.html')">
+	    </ons-navigator-toolbar>
+	</div>
 </ons-page>
