--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="MyBox">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -12,7 +12,8 @@
   <script src="lib/onsen/js/angular/angular.js"></script>    
   <script src="lib/onsen/js/onsenui.js"></script>    
   <script src="js/app.js"></script> 
-  
+  <script src="js/controller.js"></script>
+
 </head>
 
 <body>    
@@ -21,7 +22,7 @@
 
     <ons-sliding-menu 
       behind-page="menu.html" 
-      above-page="category-navigator.html">
+      above-page="item-navigator.html">
     </ons-sliding-menu>
     
   </ons-screen>
