--- a/platforms/android/assets/www/menu.html
+++ b/platforms/android/assets/www/menu.html
@@ -18,6 +18,13 @@
 			&nbsp; 所有盒子
 		</ons-list-item>
 
+		<ons-list-item 
+			class="topcoat-list__item--tappable topcoat-list__item__line-height"
+			ng-click="ons.slidingMenu.toggleMenu(); 
+			ons.slidingMenu.setAbovePage('item-navigator.html')">
+			<i class="fa fa-gear fa-lg" style="color: #666"></i>
+			&nbsp; 盒子详情
+		</ons-list-item>
 	</ul>
 
 </ons-page>
