category-create & box-create

--- a/www/box-create.html
+++ b/www/box-create.html
@@ -1,5 +1,5 @@
 <ons-page class="center">
-    <ons-navigator-toolbar title="添加盒子组"  left-button-icon="fa fa-lg fa-chevron-left" right-button-icon="fa fa-lg fa-check"
+    <ons-navigator-toolbar title="添加盒子"  left-button-icon="fa fa-lg fa-chevron-left" right-button-icon="fa fa-lg fa-check"
                            on-left-button-click="ons.navigator.popPage()">
     </ons-navigator-toolbar>
 
@@ -9,9 +9,10 @@
 	  <img src="images/name.png" class="add-item-icon">
 	</td>
 	<td width="85%">
-	  <input id="boxgroup_name" type="text" class="add-item-row-input" placeholder="名称">
+	  <input id="box_name" type="text" class="add-item-row-input" placeholder="名称">
 	</td>
       </tr>
+
     </table>
 
     <div class="add-item-take-photo">
