--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="styles/app.css"/> 
   <link rel="stylesheet" href="styles/zzj.css"/>
 
+  <link rel="stylesheet" href="styles/qr-share.css"/> 
+
   <script src="lib/onsen/js/angular/angular.js"></script>    
   <script src="lib/onsen/js/onsenui.js"></script>    
   <script src="js/app.js"></script> 
@@ -23,7 +25,7 @@
 
     <ons-sliding-menu 
       behind-page="menu.html" 
-      above-page="category-navigator.html">
+      above-page="qr-share.html">
     </ons-sliding-menu>
 
     <ons-text-input 
@@ -32,6 +34,26 @@
       style="display: block; width: 100%">
     </ons-text-input>
     
+  <ons-screen>
+    <ons-navigator title="分享">
+        <ons-page class="center">
+            <ons-row>
+              <div id="qr-box">
+                  <p class="box-number">1</p>
+                  <p class="box-location"><span id="box-category">起居室</span> : <span id="box-name">书籍</span></p>
+              </div>
+              <div id="qr-area">
+                  <p>扫描二维码可以查看盒子里的物品</p>
+                  <img src="images/qr-test.png" alt="">
+              </div>
+            </ons-row>
+            <ons-button id="share-btn"
+                ng-click="ons.screen.presentPage('page2.html')">
+                    点击分享
+            </ons-button>
+        </ons-page>
+    </ons-navigator>
+  </ons-screen>
   </ons-screen>
  
 </body>
