--- a/platforms/android/assets/www/box.html
+++ b/platforms/android/assets/www/box.html
@@ -1,22 +1,24 @@
 <ons-page class="center">
 	<ons-navigator-toolbar title="盒子"  right-button-icon="fa fa-lg fa-plus"
-                           on-right-button-click="ons.navigator.pushPage('category-create.html')">
+                           on-right-button-click="ons.navigator.pushPage('box-create.html')">
     </ons-navigator-toolbar>
 
     <div style="width:100%;">
 		<div style="width:50%; float:left; height:240px; padding:10px;">
+		  <div style="width:100%; height:100%">
 			<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
 				<img style="width:60px; margin-top:40px;" src="images/box.png">
-				<div style="font-size:40px; position:absolute; bottom:5px; right:5px;">6</div>
+				<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">6</div>
 			</div>
 			<div style="width:100%; height:25%; background-color:rgb(255, 255, 255);">
 				<div style="height:100%; line-height:55px;">起居室</div>
 			</div>
+		  </div>
 		</div>
 		<div style="width:50%; float:left; height:240px; padding:10px;">
 			<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
 				<img style="width:60px; margin-top:40px;" src="images/box.png">
-				<div style="font-size:40px; position:absolute; bottom:5px; right:5px;">5</div>
+				<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">5</div>
 			</div>
 			<div style="width:100%; height:25%; background-color:rgb(255, 255, 255);">
 				<div style="height:100%; line-height:55px;">床底</div>
@@ -26,7 +28,7 @@
 	<div style="width:100%; float:left; height:240px; padding:10px;">
 		<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
 			<img style="width:60px; margin-top:40px;" src="images/box.png">
-			<div style="font-size:40px; position:absolute; bottom:5px; right:5px;">22</div>
+			<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">22</div>
 		</div>
 		<div style="width:100%; height:25%; background-color:rgb(255, 255, 255);">
 			<div style="height:100%; line-height:55px;">柜子上面</div>
