--- a/www/item.html
+++ b/www/item.html
@@ -6,7 +6,7 @@
 	    	<div class="box-num">4</div>
 	   	</div>
 	   	<div class="box-option-container">
-	    	<div class="add-item-button"><i class="fa fa-plus"></i></div>
+	    	<div class="add-item-button"><i class="fa fa-plus" ng-click="ons.navigator.pushPage('item-create.html')"></i></div>
 	    	<div class="code-item-button"><i class="fa fa-plus"></i></div>
 	   	</div>
 	   	<ul class="item-list-container">
