--- a/www/category.html
+++ b/www/category.html
@@ -1,4 +1,5 @@
 <ons-page class="center">
+<div ng-controller="CategoryCtrl">
     <ons-navigator-toolbar title="盒子组"  right-button-icon="fa fa-lg fa-plus"
                            on-right-button-click="ons.navigator.pushPage('category-create.html')">
     </ons-navigator-toolbar>
@@ -32,4 +33,5 @@
 			</div>
 		</div>
 	</div>
+</div>
 </ons-page>
