--- a/www/item-create.html
+++ b/www/item-create.html
@@ -1,4 +1,5 @@
 <ons-page class="center">
+<div ng-controller="ItemCtrl">
     <ons-navigator-toolbar title="添加东西"  left-button-icon="fa fa-lg fa-chevron-left" right-button-icon="fa fa-lg fa-check"
                            on-left-button-click="ons.navigator.popPage()">
     </ons-navigator-toolbar>
@@ -65,6 +66,7 @@
 	拍张照吧！
       </ons-button>
     </div>
+</div>
 </ons-page>
 
 
