--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="styles/qr-share.css"/> 
 
+  <script src="js/av.js"></script>
   <script src="lib/onsen/js/angular/angular.js"></script>    
   <script src="lib/onsen/js/onsenui.js"></script>    
   <script src="js/jquery.js"></script>
