--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="lib/onsen/css/topcoat-mobile-onsen-ios7.css"> 
   <link rel="stylesheet" href="styles/app.css"/>
   <link rel="stylesheet" href="styles/jquery-ui.css"/>
-  <link rel="stylesheet" href="styles/zzj.css"/>
 
+  <link rel="stylesheet" href="styles/create-something.css"/>
   <link rel="stylesheet" href="styles/qr-share.css"/> 
 
   <script src="js/av.js"></script>
@@ -18,6 +18,8 @@
   <script src="lib/onsen/js/onsenui.js"></script>    
   <script src="js/jquery.js"></script>
   <script src="js/jquery-ui.js"></script>
+  <script src="js/qrcode.js"></script>
+  <script src="js/jquery.qrcode.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controller.js"></script>
 
