--- a/www/item.html
+++ b/www/item.html
@@ -7,7 +7,7 @@
 	   	</div>
 	   	<div class="box-option-container">
 	    	<div class="add-item-button"><i class="fa fa-plus" ng-click="ons.navigator.pushPage('item-create.html')"></i></div>
-	    	<div class="code-item-button"><i class="fa fa-qrcode"></i></div>
+	    	<div class="code-item-button"><i class="fa fa-qrcode" ng-click="ons.navigator.pushPage('qr-share.html')"></i></div>
 	   	</div>
 	   	<ul class="item-list-container">
 	   		<li class="item-item-container" ng-repeat="item in itemList">
