--- a/www/menu.html
+++ b/www/menu.html
@@ -14,7 +14,7 @@
 			class="topcoat-list__item--tappable topcoat-list__item__line-height"
 			ng-click="ons.slidingMenu.toggleMenu(); 
 			ons.slidingMenu.setAbovePage('box-navigator.html')">
-			<i class="fa fa-gear fa-lg" style="color: #666"></i>
+			<i class="fa fa-play fa-lg fa-rotate-270" style="color: #666"></i>
 			&nbsp; 所有盒子
 		</ons-list-item>
 
@@ -22,7 +22,7 @@
 			class="topcoat-list__item--tappable topcoat-list__item__line-height"
 			ng-click="ons.slidingMenu.toggleMenu(); 
 			ons.slidingMenu.setAbovePage('item-navigator.html')">
-			<i class="fa fa-gear fa-lg" style="color: #666"></i>
+			<i class="fa fa-star fa-lg" style="color: #666"></i>
 			&nbsp; 盒子详情
 		</ons-list-item>
 
