--- a/www/qr-share.html
+++ b/www/qr-share.html
@@ -1,6 +1,6 @@
   <ons-screen>
     <ons-navigator title="分享">
-        <ons-page class="center">
+        <ons-page class="center" style="overflow:scroll">
 	  <div ng-controller="QRShareCtrl">
             <ons-row>
               <div id="qr-box">
