--- a/www/item-create.html
+++ b/www/item-create.html
@@ -60,12 +60,15 @@
       </tr>
 
     </table>
-
+    <div class="add-item-photo">
+    	<img id="photoImg" src="images/ic_item_1.png"/>
+	</div>
     <div class="add-item-take-photo">
-      <ons-button type="large--cta">
+      <ons-button type="large--cta" ng-click="takePicture()">
 	拍张照吧！
       </ons-button>
     </div>
+
 </div>
 </ons-page>
 
