--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="styles/create-something.css"/>
   <link rel="stylesheet" href="styles/qr-share.css"/> 
 
-  <script src="cordova.js"></script>
-  <script src="cordova_plugins.js"></script>
+  <!--<script src="cordova.js"></script>
+  <script src="cordova_plugins.js"></script>-->
   <script src="js/av.js"></script>
   <script src="lib/onsen/js/angular/angular.js"></script>    
   <script src="lib/onsen/js/onsenui.js"></script>    
