--- a/platforms/android/assets/www/item.html
+++ b/platforms/android/assets/www/item.html
@@ -2,22 +2,22 @@
 	<div ng-controller="ItemCtrl">
 	    <ons-navigator-toolbar title="盒子详情"></ons-navigator-toolbar>
 	    <div class="box-title-container">
-	    	<div class="box-title">起居室-书籍</div>
-	    	<div class="box-num">4</div>
+	    	<div class="box-title">{{box_info.category}}:{{box_info.name}}</div>
+	    	<div class="box-num">{{box_info.order}}</div>
 	   	</div>
 	   	<div class="box-option-container">
 	    	<div class="add-item-button"><i class="fa fa-plus" ng-click="ons.navigator.pushPage('item-create.html')"></i></div>
 	    	<div class="code-item-button"><i class="fa fa-qrcode" ng-click="ons.navigator.pushPage('qr-share.html')"></i></div>
 	   	</div>
 	   	<ul class="item-list-container">
-	   		<li class="item-item-container" ng-repeat="item in itemList">
-	   			<div class="item-icon {{item.icon}}"></div>
+	   		<li class="item-item-container" ng-repeat="item in thingsList">
+	   			<div class="item-icon icon1"></div>
 	   			<div class="item-title-container">
 	   				<div class="item-title">
-	   					{{item.title}}
+	   					{{item.name}}
 	   				</div>
 	   				<div class="item-time">
-	   					{{item.time}}
+	   					{{item.createdAt}}
 	   				</div>
 	   				<div styel="clear:both;"></div>
 	   			</div>
