--- a/www/box.html
+++ b/www/box.html
@@ -2,10 +2,10 @@
 	<ons-navigator-toolbar title="盒子"  right-button-icon="fa fa-lg fa-plus"
                            on-right-button-click="ons.navigator.pushPage('box-create.html')">
     </ons-navigator-toolbar>
-
-    <div style="width:100%;">
+	<div ng-controller="BoxCtrl">
+<!--     <div style="width:100%;">
 		<div style="width:50%; float:left; height:240px; padding:10px;">
-		  <div style="width:100%; height:100%">
+		  <div style="width:100%; height:100%" ng-click="viewBoxDetail()">
 			<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
 				<img style="width:60px; margin-top:40px;" src="images/box.png">
 				<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">6</div>
@@ -15,7 +15,7 @@
 			</div>
 		  </div>
 		</div>
-		<div style="width:50%; float:left; height:240px; padding:10px;">
+		<div style="width:50%; float:left; height:240px; padding:10px;" ng-click="viewBoxDetail()">
 			<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
 				<img style="width:60px; margin-top:40px;" src="images/box.png">
 				<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">5</div>
@@ -24,8 +24,20 @@
 				<div style="height:100%; line-height:55px;">床底</div>
 			</div>
 		</div>
+	</div> -->
+	<div ng-repeat="item in boxList">
+	<div style="width:50%; float:left; height:240px; padding:10px;" ng-click="viewBoxDetail(item.id)">
+			<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
+				<img style="width:60px; margin-top:40px;" src="images/box.png">
+				<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">{{item.order}}</div>
+			</div>
+			<div style="width:100%; height:25%; background-color:rgb(255, 255, 255);">
+				<div style="height:100%; line-height:55px;">{{item.name}}</div>
+			</div>
 	</div>
-	<div style="width:100%; float:left; height:240px; padding:10px;">
+	</div>
+	
+	<!-- <div style="width:100%; float:left; height:240px; padding:10px;" ng-click="viewBoxDetail()">
 		<div style="width:100%; height:75%; background-color:rgb(239, 232, 213); position:relative;">
 			<img style="width:60px; margin-top:40px;" src="images/box.png">
 			<div style="font-size:40px; position:absolute; bottom:5px; right:5px; color:white;">22</div>
@@ -33,5 +45,6 @@
 		<div style="width:100%; height:25%; background-color:rgb(255, 255, 255);">
 			<div style="height:100%; line-height:55px;">柜子上面</div>
 		</div>
+	</div> -->
 	</div>
 </ons-page>
