--- a/www/qr-share.html
+++ b/www/qr-share.html
@@ -4,8 +4,8 @@
 	  <div ng-controller="QRShareCtrl">
             <ons-row>
               <div id="qr-box">
-                  <p class="box-number">1</p>
-                  <p class="box-location"><span id="box-category">起居室</span> : <span id="box-name">书籍</span></p>
+                  <p class="box-number">{{ box_info.order }}</p>
+                  <p class="box-location"><span id="box-category">{{ box_info.category }}</span> : <span id="box-name">{{ box_info.name }}</span></p>
               </div>
               <div id="qr-area">
                   <p>扫描二维码可以查看盒子里的物品</p>
