--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
   
   <link rel="stylesheet" href="lib/onsen/css/onsenui.css">  
   <link rel="stylesheet" href="lib/onsen/css/topcoat-mobile-onsen-ios7.css"> 
+  <link rel="stylesheet" href="lib/onsen/css/onsen-css-components-default.css">
   <link rel="stylesheet" href="styles/app.css"/>
   <link rel="stylesheet" href="styles/jquery-ui.css"/>
 
